Implemented view album details and view shopping cart

--- a/samples/MusicStore/Features/ShoppingCart/Index.cshtml
+++ b/samples/MusicStore/Features/ShoppingCart/Index.cshtml
@@ -1,4 +1,4 @@
-@model MusicStore.ViewModels.ShoppingCartViewModel
+@model MusicStore.Features.ShoppingCart.Index.Result
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Xsrf
 @{
     ViewBag.Title = "Shopping Cart";
